[package]
name = "squirrel-rng"
version = "0.2.4"
authors = ["J/A <archer884@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/archer884/squirrel-rng"
repository = "https://github.com/archer884/squirrel-rng"
keywords = ["gamedev", "random", "rng"]
categories = ["game-development"]
description = """
An impl of `rand::Rng` based on a talk by Squirrel Eiserloh re: Math for Game Programmers.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false }

[features]
default = ["std", "getrandom"]
getrandom = ["rand/getrandom"]
std = ["rand/std", "rand/std_rng"]
